Solved alignment issue, need to hide event headers

--- a/main.css
+++ b/main.css
@@ -11,10 +11,21 @@ h1{
     margin-top: 300px;
 }
 
-div{
+
+.container1{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20pt;
+    font-size: 30px;
     display: flex;
     justify-content: space-evenly;
-    margin-top: 100px;
+}
+
+.container2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.wrapper{
+    display: center;
 }
